feat: dashboard de transações
